Issue #SUPPORT-777: Removed overflow-x to account for sticky navigation bar. Fixed height of logo on IE

--- a/sites/all/themes/dokkx/scss/base/_base.scss
+++ b/sites/all/themes/dokkx/scss/base/_base.scss
@@ -6,12 +6,6 @@
  *
  */
 
-
-// Make sure the user can't scroll sideways.
-body, html {
-  overflow-x: hidden;
-}
-
 html {
   height: 100%;
 }
